--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <createDependencyReducedPom>false</createDependencyReducedPom>
               <transformers>
                 <transformer
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
@@ -60,18 +61,6 @@
   		<groupId>com.google.guava</groupId>
   		<artifactId>guava</artifactId>
   		<version>19.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.junit.jupiter</groupId>
-  		<artifactId>junit-jupiter-api</artifactId>
-  		<version>5.5.2</version>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.junit.jupiter</groupId>
-  		<artifactId>junit-jupiter-engine</artifactId>
-  		<version>5.5.2</version>
-  		<scope>test</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.maven.plugins</groupId>
